11_minikube/deployments/newhope/campaign-banners/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: campaign-banners
spec:
  rules:
    - host: campaign-banners-api.minikube
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: campaign-banners
                port:
                  name: api
